--- a/addTeam.html
+++ b/addTeam.html
@@ -42,7 +42,7 @@
           id="inp3"
           type="text"
           name="logoUrl"
-          placeholder="enter logo URL here.."
+          placeholder="Enter logo URL here.."
           required
         />
         <p>Won count</p>
@@ -51,7 +51,7 @@
           type="number"
           name="wonCount"
           maxlength="1"
-          placeholder="enter won count here.."
+          placeholder="Enter won count here.."
           required
         />
 
