--- a/addPlayer.html
+++ b/addPlayer.html
@@ -45,7 +45,7 @@
           type="number"
           name="price"
           maxlength="2"
-          placeholder="enter price for player.."
+          placeholder="Enter price for player.."
           required
         />
         <p>Select Player playing</p>
@@ -53,7 +53,7 @@
           id="inp3"
           type="text"
           name="isPlaying"
-          placeholder="enter playing status here.."
+          placeholder="Enter playing status here.."
           required
         >
           <option value="true">true</option>
