--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <div id="top-left">
         <div class="search-box">
           <a href="" target="_blank" hidden></a>
-          <input type="text" placeholder="Enter the team name" />
+          <input type="text" placeholder="Enter the team name" /><br>
           <div class="autocom-box"></div>
-          <div class="icon"><i class="fas fa-search"></i></div>
         </div>
+        <div class="icon"><i class="fas fa-search"></i></div>
       </div>
     </header>
 
